--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.1.0",
+    "@ovalmoney/react-native-fitness": "^0.5.3",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/netinfo": "^11.4.1",
@@ -21,6 +22,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@sentry/react-native": "~6.10.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@ui-kitten/components": "^5.3.1",
     "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
@@ -43,6 +45,7 @@
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-health": "^1.19.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
