--- a/app.json
+++ b/app.json
@@ -44,7 +44,10 @@
         "ACTIVITY_RECOGNITION",
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION"
-      ]
+      ],
+      "strings": {
+        "google_fit_client_id": "u0iht772eh485isvo9pt4cqrhlnt6oto.apps.googleusercontent.com"
+      }
     },
     "plugins": [
       [
@@ -60,6 +63,12 @@
         "react-native-health",
         {
           "healthSharePermission": "Nautic'Santé a besoin d'accéder à vos données de santé pour synchroniser automatiquement vos entraînements."
+        }
+      ],
+      [
+        "./plugins/withGoogleFit",
+        {
+          "androidClientId": "u0iht772eh485isvo9pt4cqrhlnt6oto.apps.googleusercontent.com"
         }
       ]
     ],
